<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ove.myapplication.Termostat">
    <group android:id="@+id/localExternalGroup"
        android:checkableBehavior="single">
        <item android:id="@+id/action_UseLocalIp"
            app:showAsAction="never"
            android:title="@string/useLocalIp"/>
        <item android:id="@+id/action_UseExternalIp"
            app:showAsAction="never"
            android:title="@string/useExternalIp"/>
    </group>
    <item
        android:id="@+id/action_setIpAddressLocal"
        android:orderInCategory="100"
        android:title="@string/setLocalIp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setIpAddressExternal"
        android:orderInCategory="100"
        android:title="@string/setExternalIp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setPassword"
        android:orderInCategory="110"
        android:title="@string/setPassword"
        app:showAsAction="never" />
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="ifRoom"/>
</menu>