<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="10dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:visibility="invisible"
        android:id="@android:id/progress" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/current_temperature"/>

    <TextView
        android:id="@+id/tvCurrentTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        tools:text="x*C" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/target_temperature"/>

    <TextView
        android:id="@+id/tvTargetTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="x*C" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/hysteresis"/>

    <TextView
        android:id="@+id/tvHyst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="x*C" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/set_target"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTarget"
            android:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:imeOptions="actionGo"
            tools:text="x*C" />
        <Button
            android:id="@+id/setTarget"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"/>
    </LinearLayout>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/set_hysteresis"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editHyst"
            android:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:imeOptions="actionGo"
            tools:text="x*C" />
        <Button
            android:id="@+id/setHyst"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"/>
    </LinearLayout>
</LinearLayout>